feat: balances user handler (with all changes)
